SOLR-18226: Validate replication file names resolve within core config/tlog directory
Replication file fetching now treats both "/" and "\" as path separators
when validating a file name, and requires config/tlog file names to
resolve within the core's config or tlog directory.

Co-Authored-By: David Smiley <dsmiley@apache.org>
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
(cherry picked from commit e044bf20b405b8ca985730be3553d77d1fc8ff31)
(cherry picked from commit 40e0e8d9e00b0553f5cc64bfbd8d4ed8526f1d27)
(cherry picked from commit 3ed9b5dbb7e203aa708012acc95c3d41bb873758)