@@ -26,8 +26,8 @@ import java.lang.invoke.MethodHandles;
 import java.nio.ByteBuffer;
 import java.nio.channels.SeekableByteChannel;
 import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -58,6 +58,7 @@ import org.apache.solr.core.SolrCore;
 import org.apache.solr.handler.ReplicationHandler;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.response.SolrQueryResponse;
+import org.apache.solr.util.FileUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -290,13 +291,10 @@ public abstract class ReplicationAPIBase extends JerseyResource {
 
       switch (dirType) {
         case CONF_FILE_SHORT:
-          cfileName = file;
+          cfileName = fileName;
           break;
         case TLOG_FILE:
-          tlogFileName = file;
-          break;
-        default:
-          fileName = file;
+          tlogFileName = fileName;
           break;
       }
 
@@ -319,7 +317,15 @@ public abstract class ReplicationAPIBase extends JerseyResource {
     // Throw exception on directory traversal attempts
     protected String validateFilenameOrError(String fileName) {
       if (fileName != null) {
-        Path filePath = Paths.get(fileName);
+        // Treat both '/' and '\' as separators so that ".." components are detected on
+        // every platform. The original fileName is returned; initFile() enforces that it
+        // resolves within the intended directory.
+        Path filePath;
+        try {
+          filePath = Path.of(FileUtils.normalizeToOsPathSeparator(fileName));
+        } catch (InvalidPathException e) {
+          throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Invalid file name");
+        }
         filePath.forEach(
             subpath -> {
               if ("..".equals(subpath.toString())) {
@@ -556,8 +562,10 @@ public abstract class ReplicationAPIBase extends JerseyResource {
 
     @Override
     protected Path initFile() {
-      // if it is a tlog file read from tlog directory
-      return Path.of(solrCore.getUpdateHandler().getUpdateLog().getTlogDir(), tlogFileName);
+      return resolveWithinOrForbidden(
+          Path.of(solrCore.getUpdateHandler().getUpdateLog().getTlogDir()),
+          tlogFileName,
+          "tlog directory");
     }
   }
 
@@ -577,9 +585,26 @@ public abstract class ReplicationAPIBase extends JerseyResource {
 
     @Override
     protected Path initFile() {
-      // if it is a conf file read from config directory
-      return solrCore.getResourceLoader().getConfigPath().resolve(cfileName);
+      return resolveWithinOrForbidden(
+          solrCore.getResourceLoader().getConfigPath(), cfileName, "core config directory");
     }
+  }
+
+  /**
+   * Resolves {@code child} against {@code parent}, throwing a FORBIDDEN {@link SolrException} if
+   * the result lies outside {@code parent}.
+   */
+  private static Path resolveWithinOrForbidden(
+      Path parent, String child, String parentDescription) {
+    if (child == null) {
+      throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "File name required");
+    }
+    Path resolved = parent.resolve(child);
+    if (!FileUtils.isPathAChildOfParent(parent, resolved)) {
+      throw new SolrException(
+          SolrException.ErrorCode.FORBIDDEN, "File path must be within the " + parentDescription);
+    }
+    return resolved.normalize();
   }
 
   private void reportErrorOnResponse(
